# mlops-project

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  cloudbuild_train.yaml  config_GPU.yaml  data.dvc  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: data_trigger.yaml  deploy_docs.yaml  stage_model.yaml  tests.yaml
api/: index.html
configs/experiment/: exp1.yaml  exp2.yaml
data/: index.html
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: data.md  index.md  model.md  train.md
model/: index.html
reports/: README.md
search/: search_index.json
src/danish_to_english_llm/: data.py  evaluate.py  model.py  profiler.py  train.py  visualize.py
tests/: test_data.py  test_model.py
tests/performancetests/: test_model.py
tests/unit_tests/: test_data.py
train/: index.html
